перенесены файлы и созданы новые маршруты и хэндлеры
