# v3/routes/routes.go
@@ -12,17 +12,28 @@ import (
 
 func SetupRouter(router *gin.Engine, db *sql.DB) {
 
-	// TODO перенаправление пользователей без требуемых прав
-
 	userRepo := repository.NewUserRepository(db)
 	handler := handlers.NewHandler(userRepo)
 
+	router.Use(middleware.RecoveryMiddleware())
+
 	api := router.Group("/api/auth/admin", middleware.AuthMiddleware("admin"))
 	{
-		api.GET("/users", handler.GetUsersHandler)
-		api.PUT("/users/:id", handler.UpdateUserHandler)
-		api.DELETE("/users/:id", handler.DeleteUserHandler)
+		api.GET("/users", handler.GetUsersHandler)                       // Получение списка пользователей
+		api.PUT("/users/:id", handler.UpdateUserHandler)                 // Обновление всех данных пользователя
+		api.DELETE("/users/:id", handler.DeleteUserHandler)              // Удаление пользователя
+		api.PUT("/users/:id/status", handler.UpdateUserStatusHandler)    // Обновление статуса пользователя
+		api.PUT("/users/:id/assign-role", handler.UpdateUserRoleHandler) // Обновление роли пользователя по ID
 	}
+	router.POST("/api/auth/register/phone", handler.RegisterByPhoneHandler) // Регистрация по телефону и паролю
+	router.POST("/api/auth/register/emile", handler.RegisterByEmailHandler) // Регистрации по почте и паролю
+	router.POST("/api/auth/login", handler.LoginHandler)                    // Вход общий по username, email, phone
+	router.POST("/api/auth/login-by-phone", handler.LoginByPhoneHandler)    // Вход по телефону и паролю
+	router.POST("/api/auth/login-by-email", handler.LoginByEmailHandler)    // Вход по почте и паролю
+
+	router.POST("/api/auth/logout", handler.LogoutHandler) // Выход
+
+	// TODO перенаправление пользователей без требуемых прав
 
 	admin := router.Group("/api/auth/admin0", middleware.AuthMiddleware("admin")) //, middleware.LoggingMiddleware())
 	{
@@ -32,14 +43,12 @@ func SetupRouter(router *gin.Engine, db *sql.DB) {
 		admin.DELETE("/users/:id", handlers.DeleteUserHandler(db))
 	}
 
-	router.POST("/api/auth/register/phone", handler.RegisterByPhoneHandler)
-	router.POST("/api/auth/register/emile", handler.RegisterByEmailHandler)
+	router.POST("/api/auth/register", handlers.RegisterHandlerDB(db))                                       // Регистрация общая по username, email, phone
+	router.PUT("/api/auth/assign-role", middleware.AuthMiddleware("admin"), handlers.AssignRoleHandler(db)) // Изменение роли по username, email, phone
+
 	//router.POST("/api/auth/register/phone", handlers.RegisterByPhoneHandler(db)) //, middleware.LoggingMiddleware())
 	//router.POST("/api/auth/register/emile", handlers.RegisterByEmailHandler(db))
 
-	router.POST("/api/auth/register", handlers.RegisterHandlerDB(db)) // all
-	router.POST("/api/auth/logout", handlers.LogoutHandler)
-	router.POST("/api/auth/login", handler.LoginHandler)
 	//router.POST("/api/auth/login", handlers.LoginHandlerDB(db), middleware.LoggingMiddleware())
 
 	router.GET("/api/auth/required-fields", handlers.GetRequiredFieldsHandler())  // Получить текущие обязательные поля
@@ -49,7 +58,6 @@ func SetupRouter(router *gin.Engine, db *sql.DB) {
 	router.GET("/api/auth/supported-login-fields", handlers.SupportedLoginFieldsHandler())
 
 	router.POST("/api/auth/refresh-access-token", handlers.RefreshAccessToken) // Маршрут для обновления токена
-	router.POST("/api/auth/assign-role", middleware.AuthMiddleware("admin"), handlers.AssignRoleHandler(db))
 
 	router.GET("/api/auth/protected", middleware.AuthMiddleware("user"), handlers.ProtectedHandler)
 	router.GET("/api/auth/editor", middleware.AuthMiddleware("editor"), handlers.EditorHandler)
